crates/ascribe-diff/tests/all/snapshots/all__prompt__every_changed_page_is_a_line.snap
---
source: crates/ascribe-diff/tests/all/prompt.rs
expression: text
---
Review what this change does to the 3 pages it changes.

Project: site/
Build: `site`

Base: `origin/main`, from where this branch left it (9f8e7d6)
To read a page: `ascribe render <page> --build site`
Changed pages of build `site`:
- content/about.md: 1 added, 1 removed
- content/install.md: 1 added, 1 removed (through content/_fragments/prereqs.md)
- content/new.md: added

Follow the project's rules in `AGENTS.md`.
Report what reads wrongly; don't edit.
